feat: Implement new vibrant theme and enhance UI components
- Redesigned the project structure for better scalability and organization.
- Integrated a modern, vibrant theme with gradients, shadows, and a fresh color palette.
- Improved button styles with Heroicons, ensuring consistency across desktop and mobile views.
- Refined navigation and header components to align with the new theme.
- Optimized layout for better user experience and visual appeal.
- Enhanced mobile responsiveness with floating action buttons.

--- a/package.json
+++ b/package.json
@@ -7,23 +7,26 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "json:server": "json-server --watch data/mock.json --delay 1000"
+    "json:server": "json-server --watch data/mock.json --delay 1000",
+    "build-tailwind": "tailwindcss build -o src/tailwind.output.css"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@ngrx/store-devtools": "^16.3.0",
+    "flowbite": "^2.3.0",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
